--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -107,7 +107,7 @@ jobs:
             echo "::set-output name=backend::$(cat dist/semver.txt)"
           else
             # GPR tillater ikke samme versjon av ei npm-pakke, selv med --allow-same-versionn
-            echo "::set-output name=frontend::$(cat dist/semver.txt)-beta.${SHORT_SHA}"
+            echo "::set-output name=frontend::$(cat dist/semver.txt)-beta.${PR_NUMBER}"
             # GPR git '400 Bad Request' ved bruk av samme versjon
             echo "::set-output name=backend::$(cat dist/semver.txt)-${SHORT_SHA}-SNAPSHOT"
           fi
@@ -126,7 +126,14 @@ jobs:
           node-version: '12'
           registry-url: 'https://npm.pkg.github.com/'
           scope: '@fleskesvor'
-      - name: Publisere til GitHub package registry
+      - name: Fjern forrige beta release
+        if: github.ref != 'refs/heads/master'
+        uses: actions/delete-package-versions@v1
+        with:
+          package-name: 'test-package'
+          package-version-ids: ${{needs.lag_versjon.outputs.frontend_versjon}}
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Publiser til GitHub package registry
         run: |
           # FIXME: Hvorfor setter ikke actions/setup-node@v1 riktig registry?
           npm config set registry https://npm.pkg.github.com/@fleskesvor
@@ -159,10 +166,10 @@ jobs:
             v1-m2snapshot-
       - name: Publisere til GitHub package registry
         run: |
-          mvn dependency:resolve --settings maven-settings.xml
-          mvn dependency:resolve-plugins --settings maven-settings.xml
-          mvn versions:set -DnewVersion=${BACKEND_VERSION} --settings maven-settings.xml
-          mvn -B deploy -Prelease -DskipTests=true --settings maven-settings.xml
+          mvn dependency:resolve --settings /settings.xml
+          mvn dependency:resolve-plugins --settings /settings.xml
+          mvn versions:set -DnewVersion=${BACKEND_VERSION}
+          mvn -B deploy -Prelease -DskipTests=true --settings /settings.xml
         working-directory: melosys-internt-kodeverk
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
