--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,8 +9,6 @@ on:
 jobs:
   bygge_frontend:
     runs-on: ubuntu-latest
-    outputs:
-      short_sha: ${{ steps.parse_commit.outputs.short_sha }}
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
@@ -25,8 +23,6 @@ jobs:
       - run: yarn install
       - run: yarn test
       - run: yarn build
-      - id: parse_commit
-        run: echo "::set-output name=short_sha::$(git rev-parse --short HEAD)"
       - uses: actions/upload-artifact@v1
         with:
           name: melosys-kodeverk
@@ -73,16 +69,22 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '12'
-      - run: |
+      - name: Øk versjon
+        if: github.ref == 'refs/heads/master'
+        run: |
           git config --global user.email "actions-melosys@nav.no"
           git config --global user.name "Actions"
           COMMIT_MESSAGE=`git log -1 --pretty=%B`
           npm version patch -m "%s, $COMMIT_MESSAGE, [skip ci]"
+      - name: Push versjon
         if: github.ref == 'refs/heads/master'
-      - uses: ad-m/github-push-action@v0.5.0
+        uses: ad-m/github-push-action@v0.5.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-        if: github.ref == 'refs/heads/master'
+      - name: Hent short sha1
+        if: github.ref != 'refs/heads/master'
+        id: parse_commit
+        run: echo "::set-output name=short_sha::$(git rev-parse --short HEAD)"
       - id: versjoner
         run: |
           SEMVER=$(jq -r .version package.json)
@@ -97,7 +99,7 @@ jobs:
         env:
           IS_MASTER: ${{ github.ref == 'refs/heads/master' }}
           PR_NUMBER: ${{ github.event.number }}
-          SHORT_SHA: ${{needs.bygge_frontend.outputs.short_sha}}
+          SHORT_SHA: ${{ steps.parse_commit.outputs.short_sha }}
 
   release_frontend:
     needs: lag_versjon
@@ -123,7 +125,7 @@ jobs:
         env:
           IS_MASTER: ${{ github.ref == 'refs/heads/master' }}
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          FRONTEND_VERSION: ${{needs.lag_versjon.outputs.frontend_versjon}}
+          FRONTEND_VERSION: ${{ needs.lag_versjon.outputs.frontend_versjon }}
 
   release_backend:
     needs: lag_versjon
@@ -150,4 +152,4 @@ jobs:
         working-directory: melosys-internt-kodeverk
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BACKEND_VERSION: ${{needs.lag_versjon.outputs.backend_versjon}}
+          BACKEND_VERSION: ${{ needs.lag_versjon.outputs.backend_versjon }}
