--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,21 +48,20 @@ jobs:
       - uses: actions/download-artifact@v1
         with:
           name: melosys-kodeverk-dist
-          path: melosys-kodeverk-java/melosys-kodeverk/dist
+          path: melosys-kodeverk/dist
       - name: Generere kildekode for Java-kodeverk
-        working-directory: melosys-kodeverk-java
         run: |
           set -e
           java -jar ../app.jar melosys-kodeverk/dist/kodemap.yml
       - name: Bygge Java-kodeverk
-        working-directory: melosys-kodeverk-java/melosys-internt-kodeverk
+        working-directory: melosys-internt-kodeverk
         run: mvn clean install -B -V
       - uses: actions/upload-artifact@v1
         with:
           name: melosys-kodeverk-java
-          path: melosys-kodeverk-java
+          path: .
 
-  lag_versjon:
+  lage_versjoner:
     needs: bygge_backend
     runs-on: ubuntu-latest
     outputs:
@@ -105,9 +104,8 @@ jobs:
           PR_NUMBER: ${{ github.event.number }}
           SHORT_SHA: ${{ steps.parse_commit.outputs.short_sha }}
 
-# FIXME Må vel hente dist/ igjen?
   release_frontend:
-    needs: lag_versjon
+    needs: lage_versjoner
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
@@ -135,10 +133,10 @@ jobs:
         env:
           IS_MASTER: ${{ github.ref == 'refs/heads/master' }}
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          FRONTEND_VERSION: ${{ needs.lag_versjon.outputs.frontend_versjon }}
+          FRONTEND_VERSION: ${{ needs.lage_versjoner.outputs.frontend_versjon }}
 
   release_backend:
-    needs: lag_versjon
+    needs: lage_versjoner
     runs-on: ubuntu-latest
     container: navikt/melosys-kodeverk-java:c0885b1e2fe12abee916aee5289933eb35a67be0
     steps:
@@ -162,4 +160,4 @@ jobs:
         working-directory: melosys-internt-kodeverk
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BACKEND_VERSION: ${{ needs.lag_versjon.outputs.backend_versjon }}
+          BACKEND_VERSION: ${{ needs.lage_versjoner.outputs.backend_versjon }}
